Bug 161648 - Border styles in Calc's sidebar not announced by screen reader
Summary: Border styles in Calc's sidebar not announced by screen reader
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 i...
Keywords:
Depends on:
Blocks: a11y, Accessibility
  Show dependency treegraph
 
Reported: 2024-06-19 08:18 UTC by Michael Weghorn
Modified: 2024-12-11 10:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast demonstrating the issue with the Orca screen reader (4.63 MB, video/x-matroska)
2024-06-19 08:18 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Weghorn 2024-06-19 08:18:40 UTC
Created attachment 194816 [details]
Screencast demonstrating the issue with the Orca screen reader

Steps to reproduce

1) start the Orca screen reader
2) start Calc with the gtk3 VCL plugin
3) navigate to the sidebar's "Properties" deck
4) press Tab until focus is on the control that can be used to select a border style in the "Cell Appearance" section
5) press space key to open the popup
6) navigate between entries using arrow keys

Actual result: Orca just announces "push button" for each item

Expected result: Orca should announce what border style each item refers to (e.g. "No border", "All borders",...), so the user knows how to select one of them.

The attached screencast shows this.

The behavior is similar with NVDA on Windows.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3909a1186cf423105c30c91136f131daf66e18c6
CPU threads: 32; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 Michael Weghorn 2024-06-19 08:20:02 UTC
tdf#140762 is very similar, but for the border styles control in the formatting toolbar, not the sidebar.

There's a pending Gerrit change to move setting the tooltip from the .ui file to the C++ source, see https://gerrit.libreoffice.org/c/core/+/169052 .

Therefore, the a11y name should probably also be set there, not in the .ui file.
Comment 2 Commit Notification 2024-06-20 03:52:54 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1bde8595bde911063f200e9aac6f1ade87d4ad59

tdf#161648 sc a11y: Set a11y name for border style button in sidebar

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Weghorn 2024-06-21 07:01:59 UTC
Pending fix: https://gerrit.libreoffice.org/c/core/+/169321
Comment 4 Commit Notification 2024-06-21 09:18:07 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ad3b33d01baaef1f1a950cd2c54d9649f0383446

tdf#161648 vcl a11y: Add weld::Toolbar::set_item_accessible_name

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-21 09:18:10 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/54f7308641c79d4907bd30cf6afc5bb62481637a

tdf#161648 sc a11y: Set a11y names for items in border style control

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2024-06-21 13:50:37 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/f6aa099d34726d719bd8dd9ac7452c051fcc0d8f

tdf#161648 vcl a11y: Add weld::Toolbar::set_item_accessible_name

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-06-21 13:51:40 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/947b67ff63a58e858537cdbbd4ffea0a96d33bfe

tdf#161648 sc a11y: Set a11y names for items in border style control

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.