tdf#161648 vcl a11y: Add weld::Toolbar::set_item_accessible_name

Add API to set the accessible name of toolbar items
and implement it for the VCL, gtk3 and gtk4 implementations.

This will be used in an upcoming commit to set a11y names
for the border items in Calc's sidebar.

Change-Id: I958390d8736da8f1281f91586cacbefb5975e229
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169320
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169330